--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "/home/ed/.vim/bundle/commentary"]
 	path = /home/ed/.vim/bundle/commentary
 	url = git://github.com/tpope/vim-commentary.git
+[submodule "/home/ed/.vim/bundle/surround"]
+	path = /home/ed/.vim/bundle/surround
+	url = git://github.com/tpope/vim-surround.git
+[submodule "/home/ed/.vim/bundle/snipmate"]
+	path = /home/ed/.vim/bundle/snipmate
+	url = git://github.com/msanders/snipmate.vim.git
