add command-t plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "/home/ed/.vim/bundle/nerdtree"]
 	path = /home/ed/.vim/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+[submodule "/home/ed/.vim/bundle/command-t"]
+	path = /home/ed/.vim/bundle/command-t
+	url = git://github.com/wincent/Command-T.git
