--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "/home/ed/.vim/bundle/command-t"]
 	path = /home/ed/.vim/bundle/command-t
 	url = git://github.com/wincent/Command-T.git
+[submodule "/home/ed/.vim/bundle/pathogen"]
+	path = /home/ed/.vim/bundle/pathogen
+	url = git://github.com/tpope/vim-pathogen.git
